# weatherquery

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README-en.md
src/weatherquery/: __init__.py  consts.py  core.py  getapi.py  name2code.py  utils.py
src/weatherquery.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/weatherquery/assets/: __init__.py
tests/: run.py  test_get_api.py  test_querier.py  testall.py
weatherquery/: __init__.py
