[project]
name = "weatherquery"
version = "0.0.13"
description = "这是一个轻量级的快捷的天气查询Python库"
readme = "README.md"
authors = [
    { name = "fexcode", email = "2734664632@qq.com" },
    {name = 'xiatianxuan', email = 'xiatianxuan2025@163.com'}
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/weatherquery/assets/**"]
