[project]
name = "weatherquery"
version = "0.1.4"
description = "这是一个轻量级的快捷的天气查询Python库"
readme = "README.md"
authors = [
    { name = "fexcode", email = "2734664632@qq.com" },
    { name = "xiatianxuan", email = "xiatianxuan2025@163.com" }
]
requires-python = ">=3.10"
dependencies = [
    "portalocker>=3.2.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["weatherquery"]
include-package-data = true
package-dir = {"" = "src"}
